# aezakmi-task

./: Dockerfile  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
aezakmi_task/: app_setup.py  di.py  main.py
aezakmi_task/controllers/: metrics.py  notification.py
aezakmi_task/controllers/middlewares/: metrics_middleware.py  rate_limiting_middleware.py
aezakmi_task/migrations/: env.py
aezakmi_task/migrations/versions/: b0530cf93c8b_create_notifications_table.py
aezakmi_task/models/: __init__.py  notification.py
aezakmi_task/repositories/: notification_repository.py
aezakmi_task/schemas/: notification.py
aezakmi_task/services/: ai_service.py  notification_service.py
aezakmi_task/tasks/: ai_tasks.py
aezakmi_task/utils/: cache.py  metrics.py
app/: app_setup.py  di.py  main.py
app/controllers/: notification.py
app/migrations/: env.py
app/models/: __init__.py  notification.py
app/repositories/: notification_repository.py
app/schemas/: notification.py
app/services/: ai_service.py  notification_service.py
app/tasks/: ai_tasks.py
configs/: app.example.toml
grafana/dashboards/: main-dashboard.json  main-dashboard.yaml
prometheus_data/: prometheus.yml
static/templates/: login.html  notification_dashboard.html
tests/integration/: conftest.py  test_notification_service.py  test_notification_system.py
tests/integration/scripts/: rm_test_environment.sh  setup_test_environment.sh
tests/unit/: conftest.py  test_notification_service.py
