[project]
name = "aezakmi_task"
version = "0.1.0"
description = "A notification service with FastAPI and AI integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.1",
    "asyncpg>=0.30.0",
    "cachetools>=5.5.2",
    "celery>=5.4.0",
    "dishka>=1.5.0",
    "fastapi==0.112",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.39",
    "toml>=0.10.2",
    "uvicorn>=0.34.0",
]
